# MegaVerse

./: .editorconfig  .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  build.gradle.kts  build.zig  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  go.mod  nx.json  package-lock.json  package.json  pnpm-workspace.yaml  pom.xml  renovate.json  settings.gradle.kts  tsconfig.base.json  turbo.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  security_vulnerability.md
.github/workflows/: cd.yml  ci.yml  lint.yml  release.yml  security.yml  test.yml
ai/: README.md
apps/admin-dashboard/: README.md  package.json
apps/analytics-dashboard/: package.json
apps/docs-site/: package.json
apps/landing-page/: package.json
apps/marketplace-frontend/: package.json
apps/mobile/: pubspec.yaml
apps/web/: README.md  next.config.js  package.json
assets/: README.md
benchmarks/: README.md
cloud/: README.md
configs/: README.md
configs/feature-flags/: README.md
configs/kafka/: README.md
configs/localization/: README.md
configs/logging/: README.md
configs/monitoring/: README.md
configs/nginx/: README.md
configs/redis/: README.md
data/: README.md
design/: README.md
docs/: README.md  api.md  deployment.md
docs/adr/: 001-monorepo.md  template.md
docs/ai/: overview.md
docs/api/: rest.md
docs/architecture/: overview.md
docs/coding-standards/: general.md  go.md  java.md  python.md  rust.md  typescript.md
docs/database/: overview.md
docs/deployment/: overview.md
docs/development/: getting-started.md
docs/documentation/: README.md
docs/performance/: overview.md
docs/release-notes/: template.md  v1.0.0.md
docs/security/: overview.md
examples/: README.md
gateway/: README.md  package.json
helm/megaverse/: Chart.yaml  values.yaml
infra/: README.md
infrastructure/: README.md
k8s/: README.md
libraries/auth/: README.md
libraries/cache/: README.md
libraries/circuit-breaker/: README.md
libraries/config/: package.json
libraries/config-loader/: README.md
libraries/crypto/: README.md
libraries/date-utils/: README.md
libraries/design-tokens/: README.md  package.json
libraries/events/: README.md
libraries/feature-flags/: README.md
libraries/form-utils/: README.md
libraries/grpc-client/: README.md
libraries/health/: README.md
libraries/http-client/: README.md
libraries/i18n/: README.md
libraries/icons/: README.md  package.json
libraries/logger/: README.md  package.json
libraries/metrics/: README.md
libraries/middleware/: README.md
libraries/queue/: README.md
libraries/rate-limiter/: README.md
libraries/retry/: README.md
libraries/serialization/: README.md
libraries/storage/: README.md
libraries/tracing/: README.md
libraries/ui/: README.md  package.json
libraries/validation/: README.md
monitoring/: README.md
research/: README.md
scripts/: README.md
sdk/cli/: README.md  go.mod
sdk/csharp/: README.md
sdk/go/: README.md  go.mod
sdk/java/: README.md  pom.xml
sdk/javascript/: README.md  package.json
sdk/kotlin/: build.gradle.kts
sdk/python/: README.md  pyproject.toml
sdk/python/src/megaverse/: __init__.py  client.py  models.py
sdk/rust/: Cargo.toml  README.md
sdk/swift/: Package.swift  README.md
security/: README.md
services/ai-service/: Dockerfile  README.md  pyproject.toml
services/ai-service/src/: main.py
services/ai-service/src/api/: routes.py
services/ai-service/src/models/: __init__.py  schemas.py
services/ai-service/src/services/: __init__.py  embedding.py  vector_store.py
services/analytics-service/: README.md
services/api-gateway/: Dockerfile  README.md  (+1 more)
shared/: go.mod
templates/: README.md
tests/: README.md
tools/: README.md
(+121 files in other folders)
