[package]
name = "megaverse"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "libraries/cache",
    "libraries/crypto",
    "libraries/rate-limiter",
    "libraries/circuit-breaker",
    "sdk/rust",
    "ai/models/training",
    "ai/models/inference",
]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1"
thiserror = "1"
