[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "megaverse-sdk"
version = "0.1.0"
description = "Official Python SDK for MegaVerse API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/megaverse"]
