[package]
name = "megaverse-sdk"
version = "0.1.0"
edition = "2021"
description = "Official Rust SDK for the MegaVerse API"
license = "MIT"

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1"
url = "2"
